2007-11-23  Dirk Mueller  <dmueller@suse.de>        Richard Guenther <rguenther@suse.de>

PR middle-end/34197
       * tree-vrp.c (check_array_ref): Move check for valid location..
       (check_array_bounds) here. Use EXPR_HAS_LOCATION().



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130385 138bc75d-0d04-0410-961f-82ee72b054a4